force-app/main/default/objects/Account/fields/FWY_Centro_Financiero__c.field-meta.xml
<CustomField>
    <fullName>FWY_Centro_Financiero__c</fullName>
    <formula>Prospecto_Origen__r.Centro_financiero__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centro Financiero</label>
    <type>Text</type>
</CustomField>