force-app/main/default/objects/Account/fields/FWY_Total_Posicion_Global__c.field-meta.xml
<CustomField>
    <fullName>FWY_Total_Posicion_Global__c</fullName>
    <label>Total Posición Global</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>