force-app/main/default/objects/Account/fields/Gastos_mensuales__c.field-meta.xml
<CustomField>
    <fullName>Gastos_mensuales__c</fullName>
    <inlineHelpText>¿A cuánto ascienden tus gastos mensuales? (Incluyendo impuestos)</inlineHelpText>
    <label>¿Gastos mensuales?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>