force-app/main/default/objects/Account/fields/GradoSatisfaccion__c.field-meta.xml
<CustomField>
    <fullName>GradoSatisfaccion__c</fullName>
    <label>Grado de satisfacción</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>