force-app/main/default/objects/Account/fields/ID_Asesor__c.field-meta.xml
<CustomField>
    <fullName>ID_Asesor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID Asesor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>