force-app/main/default/objects/Account/fields/Id_del_banquero_responsable__c.field-meta.xml
<CustomField>
    <fullName>Id_del_banquero_responsable__c</fullName>
    <formula>Banquero_responsable__r.ID_ASESOR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id del banquero responsable</label>
    <type>Text</type>
</CustomField>