force-app/main/default/objects/Account/fields/IDCuentaDuplicada_FIX__c.field-meta.xml
<CustomField>
    <fullName>IDCuentaDuplicada_FIX__c</fullName>
    <description>El campo se eliminará una vez que se solucionen ek incidente con las integraciones (SAP) 17 Julio 2025</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ID CuentaDuplicada_FIX</label>
    <length>30</length>
    <type>Text</type>
</CustomField>