force-app/main/default/objects/Account/fields/info_economica__c.field-meta.xml
<CustomField>
    <fullName>info_economica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere información económica</label>
    <type>Checkbox</type>
</CustomField>