force-app/main/default/objects/Account/fields/Ingreso_mensual_despu_s_de_impuestos__c.field-meta.xml
<CustomField>
    <fullName>Ingreso_mensual_despu_s_de_impuestos__c</fullName>
    <label>¿Ingreso mensual después de impuestos?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>