force-app/main/default/objects/Account/fields/InstFinancIdent__c.field-meta.xml
<CustomField>
    <fullName>InstFinancIdent__c</fullName>
    <label>Institución financiera de identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBVA</fullName>
            </value>
            <value>
                <fullName>Citibanamex</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
            <value>
                <fullName>Scotiabank</fullName>
            </value>
            <value>
                <fullName>Inbursa</fullName>
            </value>
            <value>
                <fullName>Banorte</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>GBM</fullName>
            </value>
            <value>
                <fullName>Invex</fullName>
            </value>
            <value>
                <fullName>Mifel</fullName>
            </value>
            <value>
                <fullName>Actinver</fullName>
            </value>
            <value>
                <fullName>Monex</fullName>
            </value>
            <value>
                <fullName>Masari</fullName>
            </value>
            <value>
                <fullName>BanRegio</fullName>
            </value>
            <value>
                <fullName>Multiva</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>