force-app/main/default/objects/Account/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <label>Institución</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banamex</fullName>
                <label>BANAMEX</label>
            </value>
            <value>
                <fullName>ABC CAPITAL</fullName>
            </value>
            <value>
                <fullName>ACTINVER</fullName>
            </value>
            <value>
                <fullName>AFIRME</fullName>
            </value>
            <value>
                <fullName>AMERICAN EXPRESS</fullName>
            </value>
            <value>
                <fullName>AUTOFIN</fullName>
            </value>
            <value>
                <fullName>BAJIO</fullName>
            </value>
            <value>
                <fullName>BANCO AZTECA</fullName>
            </value>
            <value>
                <fullName>BANCO DONDE</fullName>
            </value>
            <value>
                <fullName>BANCO INMOBILIARIO</fullName>
            </value>
            <value>
                <fullName>BANCOBASE</fullName>
            </value>
            <value>
                <fullName>BANCOMEXT</fullName>
            </value>
            <value>
                <fullName>BANCOPPEL</fullName>
            </value>
            <value>
                <fullName>BANCREA</fullName>
            </value>
            <value>
                <fullName>BANJERCITO</fullName>
            </value>
            <value>
                <fullName>BANKAOOL</fullName>
            </value>
            <value>
                <fullName>BANORTE</fullName>
            </value>
            <value>
                <fullName>BANREGIO</fullName>
            </value>
            <value>
                <fullName>BANSEFI</fullName>
            </value>
            <value>
                <fullName>BANSI</fullName>
            </value>
            <value>
                <fullName>BBVA</fullName>
            </value>
            <value>
                <fullName>BOFA</fullName>
            </value>
            <value>
                <fullName>CI BANCO</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>INBURSA</fullName>
            </value>
            <value>
                <fullName>INTERCAM</fullName>
            </value>
            <value>
                <fullName>INVERLAT</fullName>
            </value>
            <value>
                <fullName>INVEX</fullName>
            </value>
            <value>
                <fullName>JP MORGAN</fullName>
            </value>
            <value>
                <fullName>MIFEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>