force-app/main/default/objects/Account/fields/Instituciones_Internaciononales__c.field-meta.xml
<CustomField>
    <fullName>Instituciones_Internaciononales__c</fullName>
    <label>Instituciones Internaciononales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>