force-app/main/default/objects/Account/fields/Instituciones_Nacionales__c.field-meta.xml
<CustomField>
    <fullName>Instituciones_Nacionales__c</fullName>
    <label>Instituciones Nacionales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>