force-app/main/default/objects/Account/fields/InstitucionFinancieraPrincipal__c.field-meta.xml
<CustomField>
    <fullName>InstitucionFinancieraPrincipal__c</fullName>
    <inlineHelpText>Institución donde manejas la mayoria de tus activos, productos financieros o realizas la mayoría de tus transacciones.</inlineHelpText>
    <label>Institución financiera principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BBVA</fullName>
            </value>
            <value>
                <fullName>Citi</fullName>
            </value>
            <value>
                <fullName>Banamex</fullName>
            </value>
            <value>
                <fullName>Santander</fullName>
            </value>
            <value>
                <fullName>Scotiabank</fullName>
            </value>
            <value>
                <fullName>Inbursa</fullName>
            </value>
            <value>
                <fullName>Banorte</fullName>
            </value>
            <value>
                <fullName>HSBC</fullName>
            </value>
            <value>
                <fullName>GBM</fullName>
            </value>
            <value>
                <fullName>Invex</fullName>
            </value>
            <value>
                <fullName>Mifel</fullName>
            </value>
            <value>
                <fullName>Actinver</fullName>
            </value>
            <value>
                <fullName>Monex</fullName>
            </value>
            <value>
                <fullName>Masari</fullName>
            </value>
            <value>
                <fullName>BanRegio</fullName>
            </value>
            <value>
                <fullName>Multiva</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>