force-app/main/default/objects/Account/fields/Interesa_eventos__c.field-meta.xml
<CustomField>
    <fullName>Interesa_eventos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interesa eventos, convocatorias</label>
    <type>Checkbox</type>
</CustomField>