force-app/main/default/objects/Account/fields/InvestmentProfile__c.field-meta.xml
<CustomField>
    <fullName>InvestmentProfile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Perfil de Inversión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>