force-app/main/default/objects/Account/fields/Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Update__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>