force-app/main/default/objects/Account/fields/Life_Event__c.field-meta.xml
<CustomField>
    <fullName>Life_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Life Event</label>
    <referenceTo>FinServ__LifeEvent__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>