force-app/main/default/objects/Account/fields/Low_Logic__c.field-meta.xml
<CustomField>
    <fullName>Low_Logic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Baja Logica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>