force-app/main/default/objects/Account/fields/MaritalStatus__c.field-meta.xml
<CustomField>
    <fullName>MaritalStatus__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Soltero</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Casado</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Divorciado</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Separado</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Viudo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>