force-app/main/default/objects/Account/fields/Mas_de_un_asesor__c.field-meta.xml
<CustomField>
    <fullName>Mas_de_un_asesor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Más de un asesor</label>
    <type>Checkbox</type>
</CustomField>