force-app/main/default/objects/Account/fields/MedioPreferidoContacto__c.field-meta.xml
<CustomField>
    <fullName>MedioPreferidoContacto__c</fullName>
    <label>Medio preferido de contacto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Llamada telefónica</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Visita</fullName>
            </value>
            <value>
                <fullName>Videollamada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>