force-app/main/default/objects/Account/fields/MontoDeOportunidadesGanadas__c.field-meta.xml
<CustomField>
    <fullName>MontoDeOportunidadesGanadas__c</fullName>
    <label>Monto de Oportunidades Ganadas</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Cerrada Ganada</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>