force-app/main/default/objects/Account/fields/MontoDeOportunidadesPerdidas__c.field-meta.xml
<CustomField>
    <fullName>MontoDeOportunidadesPerdidas__c</fullName>
    <label>Monto de Oportunidades Perdidas</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Cerrada Perdida</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>