force-app/main/default/objects/Account/fields/Nivel_Influencia_plaza__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Influencia_plaza__c</fullName>
    <label>Nivel de Influencia en la plaza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
            <value>
                <fullName>NULO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>