force-app/main/default/objects/Account/fields/Nivel_SocioEco__c.field-meta.xml
<CustomField>
    <fullName>Nivel_SocioEco__c</fullName>
    <label>Nivel Socioeconómico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Medio-Alto</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Medio-Bajo</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>