force-app/main/default/objects/Account/fields/Nombre_Completo_Actinver__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo_Actinver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre Completo Actinver</label>
    <length>200</length>
    <type>Text</type>
</CustomField>