force-app/main/default/objects/Account/fields/NombreBanqueroAsignado__c.field-meta.xml
<CustomField>
    <fullName>NombreBanqueroAsignado__c</fullName>
    <formula>BanqueroAsignado__r.NombreAsesor__c</formula>
    <label>Banquero asignado</label>
    <type>Text</type>
</CustomField>