force-app/main/default/objects/Account/fields/NombreCentroFinanciero__c.field-meta.xml
<CustomField>
    <fullName>NombreCentroFinanciero__c</fullName>
    <formula>Owner.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre centro financiero</label>
    <type>Text</type>
</CustomField>