force-app/main/default/objects/Account/fields/Nombrecompletodequieninfluye__c.field-meta.xml
<CustomField>
    <fullName>Nombrecompletodequieninfluye__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre completo de quien influye</label>
    <length>50</length>
    <type>Text</type>
</CustomField>