force-app/main/default/objects/Account/fields/Nombredelfamiliar__c.field-meta.xml
<CustomField>
    <fullName>Nombredelfamiliar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del familiar</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (¿Quien es tu familiar?)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>