force-app/main/default/objects/Account/fields/NoRequiereSerContactado__c.field-meta.xml
<CustomField>
    <fullName>NoRequiereSerContactado__c</fullName>
    <formula>IF(
   OR(
       ISBLANK(FechaNoRequiereSerContacto__c)
      ,ISNULL(FechaNoRequiereSerContacto__c)
      )
, false, true)</formula>
    <label>No requiere ser contactado</label>
    <type>Checkbox</type>
</CustomField>