force-app/main/default/objects/Account/fields/NumeroCliente__c.field-meta.xml
<CustomField>
    <fullName>NumeroCliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número de cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>