force-app/main/default/objects/Account/fields/Ocupation__c.field-meta.xml
<CustomField>
    <fullName>Ocupation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ocupación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>