force-app/main/default/objects/Account/fields/Oferta_PPR__c.field-meta.xml
<CustomField>
    <fullName>Oferta_PPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Se ofreció un PPR?</label>
    <type>Checkbox</type>
</CustomField>