force-app/main/default/objects/Account/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referenciado Cliente</fullName>
            </value>
            <value>
                <fullName>Referenciado Interno</fullName>
            </value>
            <value>
                <fullName>Evento Social</fullName>
            </value>
            <value>
                <fullName>Evento Actinver (se gestiona por área de MKT)</fullName>
            </value>
            <value>
                <fullName>Desayuno CF</fullName>
            </value>
            <value>
                <fullName>Pádel</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>