force-app/main/default/objects/Account/fields/Otra_red_social__c.field-meta.xml
<CustomField>
    <fullName>Otra_red_social__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Otra red social</label>
    <length>20</length>
    <type>Text</type>
</CustomField>