force-app/main/default/objects/Account/fields/OtraActividadProsenional__c.field-meta.xml
<CustomField>
    <fullName>OtraActividadProsenional__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Otro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>