force-app/main/default/objects/Account/fields/OtraFrecuenciaContacto__c.field-meta.xml
<CustomField>
    <fullName>OtraFrecuenciaContacto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Otro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>