force-app/main/default/objects/Account/fields/Otrosproductosfinancierosteinteresan__c.field-meta.xml
<CustomField>
    <fullName>Otrosproductosfinancierosteinteresan__c</fullName>
    <inlineHelpText>Adicional a tus productos actuales, ¿Qué otros productos financieros te interesan?</inlineHelpText>
    <label>¿Otros productos financieros de interés?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Productos de inversión</fullName>
            </value>
            <value>
                <fullName>Productos de retiro y previsión social</fullName>
            </value>
            <value>
                <fullName>Arrendamiento</fullName>
            </value>
            <value>
                <fullName>Créditos</fullName>
            </value>
            <value>
                <fullName>Seguros</fullName>
            </value>
            <value>
                <fullName>Productos bancarios</fullName>
            </value>
            <value>
                <fullName>Estrategias de Inversión</fullName>
            </value>
            <value>
                <fullName>Fondos de inversión</fullName>
            </value>
            <value>
                <fullName>Mercado de cambios</fullName>
            </value>
            <value>
                <fullName>Mercado de capitales</fullName>
            </value>
            <value>
                <fullName>Mercado de dinero</fullName>
            </value>
            <value>
                <fullName>Carteras modelo</fullName>
            </value>
            <value>
                <fullName>Mercado de derivados</fullName>
            </value>
            <value>
                <fullName>Cuenta especial para el ahorro</fullName>
            </value>
            <value>
                <fullName>CD Platinum</fullName>
            </value>
            <value>
                <fullName>Pagaré CEDE</fullName>
            </value>
            <value>
                <fullName>Notas estructuradas</fullName>
            </value>
            <value>
                <fullName>Cambios</fullName>
            </value>
            <value>
                <fullName>Divisas</fullName>
            </value>
            <value>
                <fullName>Reporto en Dólares</fullName>
            </value>
            <value>
                <fullName>Fiduciario</fullName>
            </value>
            <value>
                <fullName>Plan personal de retiro</fullName>
            </value>
            <value>
                <fullName>Fondo de ahorro</fullName>
            </value>
            <value>
                <fullName>Caja de ahorro</fullName>
            </value>
            <value>
                <fullName>Plan de pensiones</fullName>
            </value>
            <value>
                <fullName>Arrendamiento Puro</fullName>
            </value>
            <value>
                <fullName>Arrendamiento Financiero</fullName>
            </value>
            <value>
                <fullName>Crédito automotriz</fullName>
            </value>
            <value>
                <fullName>Crédito revolvente</fullName>
            </value>
            <value>
                <fullName>Crédito prendario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>