force-app/main/default/objects/Account/fields/Parentezco__c.field-meta.xml
<CustomField>
    <fullName>Parentezco__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parentezco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>