force-app/main/default/objects/Account/fields/Pasatiempo__c.field-meta.xml
<CustomField>
    <fullName>Pasatiempo__c</fullName>
    <label>Pasatiempo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ajedrez</fullName>
            </value>
            <value>
                <fullName>Arte</fullName>
            </value>
            <value>
                <fullName>Bailar</fullName>
            </value>
            <value>
                <fullName>Caminar</fullName>
            </value>
            <value>
                <fullName>Cine</fullName>
            </value>
            <value>
                <fullName>Deportes</fullName>
            </value>
            <value>
                <fullName>Dibujar//Pintar</fullName>
            </value>
            <value>
                <fullName>Escribir</fullName>
            </value>
            <value>
                <fullName>Eventos Sociales</fullName>
            </value>
            <value>
                <fullName>Fotografía</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Idiomas</fullName>
            </value>
            <value>
                <fullName>Jardinería</fullName>
            </value>
            <value>
                <fullName>Leer</fullName>
            </value>
            <value>
                <fullName>Magia</fullName>
            </value>
            <value>
                <fullName>Modelado</fullName>
            </value>
            <value>
                <fullName>Música</fullName>
            </value>
            <value>
                <fullName>Redes Sociales</fullName>
            </value>
            <value>
                <fullName>Repostería</fullName>
            </value>
            <value>
                <fullName>Restauración de autos</fullName>
            </value>
            <value>
                <fullName>Teatro</fullName>
            </value>
            <value>
                <fullName>Tejer</fullName>
            </value>
            <value>
                <fullName>Viajes</fullName>
            </value>
            <value>
                <fullName>Video juegos</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>