force-app/main/default/objects/Account/fields/Patrim_FechaCreacionProspecto__c.field-meta.xml
<CustomField>
    <fullName>Patrim_FechaCreacionProspecto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de creación del prospecto</label>
    <type>DateTime</type>
</CustomField>