force-app/main/default/objects/Account/fields/PatrimMonedero__c.field-meta.xml
<CustomField>
    <fullName>PatrimMonedero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monedero</label>
    <type>Checkbox</type>
</CustomField>